--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -32,8 +32,9 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v2
             - name: Setup Go
-              uses: actions/setup-go@v2
-
+              uses: actions/setup-go@v3
+              with:
+                go-version: '>=1.18.0'
     code-quality-check:
         needs: code-setup
         runs-on: ubuntu-latest
