--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -30,11 +30,11 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
             - name: Setup Go
               uses: actions/setup-go@v3
               with:
-                go-version: '>=1.18.0'
+                go-version: '>=1.18.x'
     code-quality-check:
         needs: code-setup
         runs-on: ubuntu-latest
