--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,26 +34,27 @@
         "framer-motion": "^4.1.17",
         "graphql": "^15.5.0",
         "highlight.run": "^4.0.0",
-        "html2canvas": "^1.3.2",
-        "intro.js": "^4.1.0",
-        "intro.js-react": "^0.4.0",
-        "lottie-react": "^2.1.0",
-        "moment": "^2.29.1",
-        "node-sass": "5.0.0",
-        "query-string": "6.14.1",
-        "randomcolor": "^0.6.2",
-        "re-resizable": "^6.9.1",
-        "react": "^16.13.1",
-        "react-awesome-query-builder": "^4.8.0",
-        "react-collapsible": "^2.8.1",
-        "react-command-palette": "0.16.0",
-        "react-confetti": "^6.0.1",
-        "react-copy-to-clipboard": "^5.0.2",
-        "react-date-range": "^1.4.0",
-        "react-device-detect": "^2.0.1",
-        "react-dom": "^16.13.1",
-        "react-draggable": "^4.4.3",
-        "react-files-hooks": "^2.0.0",
+      "html2canvas": "^1.3.2",
+      "intro.js": "^4.1.0",
+      "intro.js-react": "^0.4.0",
+      "lottie-react": "^2.1.0",
+      "moment": "^2.29.1",
+      "node-sass": "5.0.0",
+      "query-string": "6.14.1",
+      "randomcolor": "^0.6.2",
+      "re-resizable": "^6.9.1",
+      "react": "^16.13.1",
+      "react-animate-height": "^2.1.2",
+      "react-awesome-query-builder": "^4.8.0",
+      "react-collapsible": "^2.8.1",
+      "react-command-palette": "0.16.0",
+      "react-confetti": "^6.0.1",
+      "react-copy-to-clipboard": "^5.0.2",
+      "react-date-range": "^1.4.0",
+      "react-device-detect": "^2.0.1",
+      "react-dom": "^16.13.1",
+      "react-draggable": "^4.4.3",
+      "react-files-hooks": "^2.0.0",
         "react-firebase-hooks": "^2.2.0",
         "react-grid-layout": "^1.3.3",
         "react-helmet": "^6.1.0",
