--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -8,8 +8,12 @@ jobs:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the repo
-        uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: '>=1.18.x'
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
