--- a/frontend/package.json
+++ b/frontend/package.json
@@ -138,6 +138,7 @@
         "@types/react-linkify": "^1.0.1",
         "@types/react-syntax-highlighter": "^13.5.2",
         "@types/validator": "^13.1.3",
+        "@types/w3c-image-capture": "^1.0.6",
         "@typescript-eslint/eslint-plugin": "^4.15.1",
         "@typescript-eslint/parser": "^4.15.1",
         "eslint-config-prettier": "^7.2.0",
