--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,7 +39,6 @@
         "intro.js-react": "^0.4.0",
         "lottie-react": "^2.1.0",
         "moment": "^2.29.1",
-        "node-sass": "5.0.0",
         "query-string": "6.14.1",
         "randomcolor": "^0.6.2",
         "re-resizable": "^6.9.1",
@@ -146,6 +145,7 @@
         "eslint-plugin-react-hooks": "^4.2.0",
         "eslint-plugin-unused-imports": "^1.1.2",
         "prettier": "^2.2.1",
+        "sass": "^1.50.1",
         "typed-scss-modules": "^3.4.0"
     },
     "resolutions": {
