integrate with s3 and remove express

--- a/render/tsconfig.json
+++ b/render/tsconfig.json
@@ -65,33 +65,12 @@
     /* Advanced Options */
     "skipLibCheck": true,                     /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true,  /* Disallow inconsistently-cased references to the same file. */
-    "paths": {
-      "@repos/*": [
-        "src/repos/*"
-      ],
-      "@models/*": [
-        "src/models/*"
-      ],
-      "@shared/*": [
-        "src/shared/*"
-      ],
-      "@server": [
-        "src/server"
-      ],
-      "@services/*": [
-        "src/services/*"
-      ],
-      "@routes/*": [
-        "src/routes/*"
-      ]
-    },
     "useUnknownInCatchVariables": false
   },
   "include": [
-    "src/**/*.ts",
-    "spec/**/*.ts"
+    "src/*.ts",
   ],
   "exclude": [
-    "src/public/"
+    "node_modules"
   ]
 }
