--- a/render/package.json
+++ b/render/package.json
@@ -2,12 +2,8 @@
   "name": "render",
   "version": "0.0.0",
   "scripts": {
-    "build": "./node_modules/.bin/ts-node build.ts",
     "lint": "eslint . --ext .ts",
-    "start": "node -r module-alias/register ./dist --env=production",
-    "start:dev": "nodemon",
-    "test": "nodemon --config ./spec/nodemon.json",
-    "test:no-reloading": "./node_modules/.bin/ts-node -r tsconfig-paths/register ./spec"
+    "render": "nodemon"
   },
   "nodemonConfig": {
     "watch": [
@@ -18,14 +14,6 @@
       "src/public"
     ],
     "exec": "./node_modules/.bin/ts-node -r tsconfig-paths/register ./src"
-  },
-  "_moduleAliases": {
-    "@services": "dist/services",
-    "@repos": "dist/repos",
-    "@entities": "dist/entities",
-    "@shared": "dist/shared",
-    "@server": "dist/server",
-    "@routes": "dist/routes"
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
@@ -44,7 +32,7 @@
       "max-len": [
         "error",
         {
-          "code": 100
+          "code": 120
         }
       ],
       "no-console": 1,
@@ -54,6 +42,7 @@
       "@typescript-eslint/no-explicit-any": 0,
       "@typescript-eslint/no-floating-promises": 0,
       "@typescript-eslint/no-unsafe-member-access": 0,
+      "@typescript-eslint/no-unsafe-call": 0,
       "@typescript-eslint/no-unsafe-assignment": 0
     }
   },
@@ -62,39 +51,20 @@
     "build.ts"
   ],
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.76.0",
     "@highlight-run/rrweb": "^1.1.20",
-    "command-line-args": "^5.2.1",
-    "cookie-parser": "^1.4.6",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3",
-    "express-async-errors": "^3.1.1",
-    "helmet": "^5.0.2",
-    "http-status-codes": "^2.2.0",
-    "jet-logger": "^1.1.5",
-    "jsonfile": "^6.1.0",
-    "module-alias": "^2.2.2",
-    "morgan": "^1.10.0",
     "puppeteer": "^13.6.0"
   },
   "devDependencies": {
-    "@types/command-line-args": "^5.2.0",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/express": "^4.17.13",
     "@types/find": "^0.2.1",
     "@types/fs-extra": "^9.0.13",
-    "@types/jasmine": "^4.0.3",
-    "@types/jsonfile": "^6.1.0",
-    "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.25",
-    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "eslint": "^8.13.0",
     "find": "^0.3.0",
     "fs-extra": "^10.1.0",
-    "jasmine": "^4.1.0",
     "nodemon": "^2.0.15",
-    "supertest": "^6.2.2",
     "ts-node": "^10.7.0",
     "tsconfig-paths": "^3.14.1",
     "typescript": "^4.6.3"
