--- a/frontend/package.json
+++ b/frontend/package.json
@@ -85,7 +85,7 @@
         "stylelint-config-standard": "^22.0.0",
         "stylelint-prettier": "^1.2.0",
         "subscriptions-transport-ws": "^0.11.0",
-        "typescript": "^4.4.3",
+        "typescript": "^4.6.3",
         "use-http": "^1.0.13",
         "use-query-params": "^1.2.0",
         "validator": "^13.5.2"
@@ -144,12 +144,14 @@
         "eslint-plugin-react": "^7.22.0",
         "eslint-plugin-react-hooks": "^4.2.0",
         "eslint-plugin-unused-imports": "^1.1.2",
+        "postcss-custom-properties": "^12.1.7",
         "prettier": "^2.2.1",
         "sass": "^1.50.1",
         "typed-scss-modules": "^3.4.0"
     },
     "resolutions": {
         "**/@typescript-eslint/eslint-plugin": "^4.12.0",
-        "**/@typescript-eslint/parser": "^4.12.0"
+        "**/@typescript-eslint/parser": "^4.12.0",
+        "**/postcss-custom-properties": "^12.1.7"
     }
 }
