--- a/render/package.json
+++ b/render/package.json
@@ -56,23 +56,23 @@
     "@aws-sdk/client-s3": "^3.76.0",
     "@highlight-run/rrweb": "^1.1.20",
     "chrome-aws-lambda": "^10.1.0",
-    "puppeteer-core": "^10.1.0"
-  },
-  "devDependencies": {
+    "puppeteer-core": "^10.1.0",
     "@types/aws-lambda": "^8.10.95",
     "@types/find": "^0.2.1",
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^17.0.25",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "eslint": "^8.13.0",
     "find": "^0.3.0",
     "fs-extra": "^10.1.0",
-    "nodemon": "^2.0.15",
-    "puppeteer": "^13.6.0",
     "ts-node": "^10.7.0",
     "tsconfig-paths": "^3.14.1",
     "typescript": "^4.6.3"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
+    "eslint": "^8.13.0",
+    "nodemon": "^2.0.15",
+    "puppeteer": "^13.6.0"
   },
   "packageManager": "yarn@3.2.0"
 }
