only deploy from master

--- a/.github/workflows/deploy-render.yml
+++ b/.github/workflows/deploy-render.yml
@@ -2,7 +2,7 @@ name: Deploy Screenshots Render Lambda to AWS
 on:
     push:
         branches:
-            - '**'
+            - 'master'
         paths:
             - 'render/**'
             - '.github/workflows/deploy-render.yml'
