[HIG-2215] use chunks for rrweb
Render with event chunk files for faster loading.
A 27 minute session screenshot at the 18th minute takes ~7.2 sec to render
without chunking and ~6.3 sec to render
with chunking. Improvement should be
even more dramatic with long sessions
and is important to prevent lambda from
OOMing.

--- a/render/package.json
+++ b/render/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "lint": "eslint . --ext .ts",
     "build": "tsc --build ./",
+    "single": "DEV=true ts-node -r tsconfig-paths/register ./src",
     "dev": "DEV=true nodemon",
     "publish": "zip -r function.zip dist node_modules && aws s3 cp function.zip s3://highlight-lambda-code/session-screenshots.zip && rm function.zip && aws lambda update-function-code --function-name session-screenshots --s3-bucket highlight-lambda-code --s3-key session-screenshots.zip"
   },
