--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -19,7 +19,7 @@
     "isolatedModules": true,
     "downlevelIteration": true,
     "noEmit": true,
-    "jsx": "react-jsx",
+    "jsx": "react",
     "allowJs": true,
     "typeRoots": [
       "./node_modules/@types",
