--- a/frontend/package.json
+++ b/frontend/package.json
@@ -77,13 +77,12 @@
         "validator": "13.7.0"
     },
     "scripts": {
-        "start": "HTTPS=true doppler run -- craco start",
+        "start": "HTTPS=true doppler run -- vite",
         "styles": "tsm src -w --logLevel=error",
         "gql": "graphql-codegen --config --watch codegen.yml",
         "gql:nowatch": "graphql-codegen --config codegen.yml",
-        "build": "craco build",
-        "test": "craco test",
-        "eject": "react-scripts eject",
+        "build": "tsc && vite build",
+        "test": "vite test",
         "lint": "prettier --check --write 'src/**/*.{ts,tsx,scss}' && yarn lint:es && stylelint \"**/*.scss\"",
         "lint:es": "eslint --fix \"src/**/*.{ts,tsx}\"",
         "lint:css": "stylelint \"**/*.scss\" --fix",
@@ -106,7 +105,6 @@
         ]
     },
     "devDependencies": {
-        "@craco/craco": "^6.4.5",
         "@graphql-codegen/cli": "^1.20.1",
         "@graphql-codegen/import-types-preset": "^1.18.1",
         "@graphql-codegen/named-operations-object": "^2.1.0",
@@ -138,13 +136,15 @@
         "@types/validator": "^13.1.3",
         "@typescript-eslint/eslint-plugin": "^5.30.6",
         "@typescript-eslint/parser": "^5.30.6",
-        "craco-antd": "^1.19.0",
+        "@vitejs/plugin-react": "^1.3.1",
         "eslint": "^7.0.0",
         "eslint-config-prettier": "^7.2.0",
         "eslint-plugin-prettier": "^3.3.1",
         "eslint-plugin-react": "^7.22.0",
         "eslint-plugin-react-hooks": "^4.2.0",
         "eslint-plugin-unused-imports": "^1.1.2",
+        "less": "^4.1.2",
+        "less-vars-to-js": "^1.3.0",
         "postcss": "^8.3.3",
         "postcss-custom-properties": "^12.1.7",
         "prettier": "^2.2.1",
@@ -156,10 +156,15 @@
         "stylelint-config-standard": "^26.0.0",
         "stylelint-prettier": "^2.0.0",
         "typed-scss-modules": "^3.4.0",
-        "typescript": "^4.7.4"
+        "typescript": "^4.7.4",
+        "vite": "^2.9.6",
+        "vite-plugin-env-compatible": "^1.1.1",
+        "vite-plugin-import": "^0.4.0",
+        "vite-plugin-svgr": "^1.1.0",
+        "vite-tsconfig-paths": "^3.4.1"
     },
     "resolutions": {
-        "**/postcss-custom-properties": "^12.1.7",
         "react-error-overlay": "6.0.9"
-    }
+    },
+    "packageManager": "yarn@3.2.0"
 }
