--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "./tsconfig.paths.json",
   "compilerOptions": {
-    "target": "es5",
+    "target": "ESNext",
     "lib": [
       "dom",
       "es2019",
@@ -25,9 +25,11 @@
       "./node_modules/@types",
       "./src/@types"
     ],
+    "types": ["vite/client", "vite-plugin-svgr/client"],
     "noFallthroughCasesInSwitch": true
   },
   "include": [
     "./src"
-  ]
+  ],
+  "exclude": ["**/*.test.ts"]
 }
