--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,6 @@
     "private": true,
     "dependencies": {
         "@apollo/client": "^3.1.4",
-        "@craco/craco": "^6.1.1",
         "@datadog/browser-logs": "^4.0.1",
         "@highlight-run/react": "^1.1.6",
         "@highlight-run/react-mentions": "4.4.1",
@@ -26,7 +25,6 @@
         "antd": "^4.6.3",
         "classnames": "^2.2.6",
         "color-hash": "^2.0.1",
-        "craco-antd": "^1.19.0",
         "dinero.js": "^2.0.0-alpha.8",
         "eslint-plugin-simple-import-sort": "^7.0.0",
         "firebase": "^7.19.1",
@@ -67,7 +65,6 @@
         "react-resize-aware": "^3.0.1",
         "react-resize-panel-ts": "^0.0.5",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "4.0.3",
         "react-select": "^3.1.1",
         "react-snowfall": "^1.1.1",
         "react-spinners": "^0.9.0",
@@ -90,13 +87,12 @@
         "validator": "^13.5.2"
     },
     "scripts": {
-        "start": "HTTPS=true doppler run -- craco start",
+        "start": "HTTPS=true doppler run -- vite",
         "styles": " tsm src -w",
         "gql": "graphql-codegen --config --watch codegen.yml",
         "gql:nowatch": "graphql-codegen --config codegen.yml",
-        "build": "craco build",
-        "test": "craco test",
-        "eject": "react-scripts eject",
+        "build": "tsc && vite build",
+        "test": "vite test",
         "lint": "prettier --check --write 'src/**/*.{ts,tsx,scss}' && yarn lint:es && stylelint \"**/*.scss\"",
         "lint:es": "eslint --fix \"src/**/*.{ts,tsx}\"",
         "lint:css": "stylelint \"**/*.scss\" --fix",
@@ -137,19 +133,23 @@
         "@types/validator": "^13.1.3",
         "@typescript-eslint/eslint-plugin": "^4.15.1",
         "@typescript-eslint/parser": "^4.15.1",
+        "@vitejs/plugin-react": "^1.3.1",
         "eslint-config-prettier": "^7.2.0",
         "eslint-plugin-prettier": "^3.3.1",
         "eslint-plugin-react": "^7.22.0",
         "eslint-plugin-react-hooks": "^4.2.0",
         "eslint-plugin-unused-imports": "^1.1.2",
+        "less": "^4.1.2",
+        "less-vars-to-js": "^1.3.0",
         "postcss-custom-properties": "^12.1.7",
         "prettier": "^2.2.1",
         "sass": "^1.50.1",
-        "typed-scss-modules": "^3.4.0"
+        "typed-scss-modules": "^3.4.0",
+        "vite": "^2.9.6",
+        "vite-plugin-env-compatible": "^1.1.1",
+        "vite-plugin-import": "^0.4.0",
+        "vite-plugin-svgr": "^1.1.0",
+        "vite-tsconfig-paths": "^3.4.1"
     },
-    "resolutions": {
-        "**/@typescript-eslint/eslint-plugin": "^4.12.0",
-        "**/@typescript-eslint/parser": "^4.12.0",
-        "**/postcss-custom-properties": "^12.1.7"
-    }
+    "packageManager": "yarn@3.2.0"
 }
