--- a/frontend/package.json
+++ b/frontend/package.json
@@ -147,7 +147,7 @@
         "typed-scss-modules": "^3.4.0",
         "vite": "^2.9.6",
         "vite-plugin-env-compatible": "^1.1.1",
-        "vite-plugin-import": "^0.4.0",
+        "vite-plugin-imp": "^2.1.8",
         "vite-plugin-svgr": "^1.1.0",
         "vite-tsconfig-paths": "^3.4.1"
     },
