--- a/frontend/package.json
+++ b/frontend/package.json
@@ -159,7 +159,7 @@
         "typescript": "^4.7.4",
         "vite": "^2.9.6",
         "vite-plugin-env-compatible": "^1.1.1",
-        "vite-plugin-import": "^0.4.0",
+        "vite-plugin-imp": "^2.1.8",
         "vite-plugin-svgr": "^1.1.0",
         "vite-tsconfig-paths": "^3.4.1"
     },
