--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -47,7 +47,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
       - name: Install main dependencies
-        run: cd frontend && yarn --prefer-offline
+        run: cd frontend && yarn
       - name: copy frontend
         run: |
           mkdir tmp
@@ -81,7 +81,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
       - name: Install main dependencies
-        run: cd frontend && yarn --prefer-offline
+        run: cd frontend && yarn
       - name: Runs linting
         run: cd frontend && yarn lint
       - name: Run Tests
