--- a/frontend/package.json
+++ b/frontend/package.json
@@ -134,6 +134,7 @@
         "@typescript-eslint/eslint-plugin": "^4.15.1",
         "@typescript-eslint/parser": "^4.15.1",
         "@vitejs/plugin-react": "^1.3.1",
+        "eslint": "^7.32.0",
         "eslint-config-prettier": "^7.2.0",
         "eslint-plugin-prettier": "^3.3.1",
         "eslint-plugin-react": "^7.22.0",
