--- a/frontend/package.json
+++ b/frontend/package.json
@@ -92,7 +92,7 @@
         "gql": "graphql-codegen --config --watch codegen.yml",
         "gql:nowatch": "graphql-codegen --config codegen.yml",
         "build": "tsc && vite build",
-        "test": "vite test",
+        "test": "jest src",
         "lint": "prettier --check --write 'src/**/*.{ts,tsx,scss}' && yarn lint:es && stylelint \"**/*.scss\"",
         "lint:es": "eslint --fix \"src/**/*.{ts,tsx}\"",
         "lint:css": "stylelint \"**/*.scss\" --fix",
@@ -123,7 +123,7 @@
         "@graphql-codegen/typescript-react-apollo": "^2.2.1",
         "@svgr/cli": "^5.5.0",
         "@types/color-hash": "^1.0.1",
-        "@types/jest": "^27.0.1",
+        "@types/jest": "^27.4.1",
         "@types/randomcolor": "^0.5.5",
         "@types/react-date-range": "^1.4.1",
         "@types/react-helmet": "^6.1.4",
@@ -140,11 +140,13 @@
         "eslint-plugin-react": "^7.22.0",
         "eslint-plugin-react-hooks": "^4.2.0",
         "eslint-plugin-unused-imports": "^1.1.2",
+        "jest": "^27.5.1",
         "less": "^4.1.2",
         "less-vars-to-js": "^1.3.0",
         "postcss-custom-properties": "^12.1.7",
         "prettier": "^2.2.1",
         "sass": "^1.50.1",
+        "ts-jest": "^27.1.4",
         "typed-scss-modules": "^3.4.0",
         "vite": "^2.9.6",
         "vite-plugin-env-compatible": "^1.1.1",
