--- a/frontend/package.json
+++ b/frontend/package.json
@@ -82,7 +82,7 @@
         "gql": "graphql-codegen --config --watch codegen.yml",
         "gql:nowatch": "graphql-codegen --config codegen.yml",
         "build": "tsc && vite build",
-        "test": "vite test",
+        "test": "jest src",
         "lint": "prettier --check --write 'src/**/*.{ts,tsx,scss}' && yarn lint:es && stylelint \"**/*.scss\"",
         "lint:es": "eslint --fix \"src/**/*.{ts,tsx}\"",
         "lint:css": "stylelint \"**/*.scss\" --fix",
@@ -115,7 +115,7 @@
         "@testing-library/jest-dom": "^5.1.0",
         "@types/classnames": "^2.2.11",
         "@types/color-hash": "^1.0.1",
-        "@types/jest": "^27.0.1",
+        "@types/jest": "^27.4.1",
         "@types/lodash": "^4.14.168",
         "@types/node": "^18.0.4",
         "@types/randomcolor": "^0.5.5",
@@ -143,6 +143,7 @@
         "eslint-plugin-react": "^7.22.0",
         "eslint-plugin-react-hooks": "^4.2.0",
         "eslint-plugin-unused-imports": "^1.1.2",
+        "jest": "^27.5.1",
         "less": "^4.1.2",
         "less-vars-to-js": "^1.3.0",
         "postcss": "^8.3.3",
@@ -155,6 +156,7 @@
         "stylelint-config-sass-guidelines": "^9.0.1",
         "stylelint-config-standard": "^26.0.0",
         "stylelint-prettier": "^2.0.0",
+        "ts-jest": "^27.1.4",
         "typed-scss-modules": "^3.4.0",
         "typescript": "^4.7.4",
         "vite": "^2.9.6",
