--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -37,7 +37,9 @@ jobs:
           registry-url: https://registry.npmjs.org
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
+        run: |
+          cd frontend/
+          echo "::set-output name=dir::$(yarn config get cacheFolder)"
       - name: Restore yarn cache
         uses: actions/cache@v2
         id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
@@ -71,7 +73,9 @@ jobs:
           registry-url: https://registry.npmjs.org
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
+        run: |
+          cd frontend/
+          echo "::set-output name=dir::$(yarn config get cacheFolder)"
       - name: Restore yarn cache
         uses: actions/cache@v2
         id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
