--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,6 @@
         "intro.js-react": "^0.4.0",
         "lottie-react": "^2.1.0",
         "moment": "^2.29.1",
-        "node-sass": "5.0.0",
         "query-string": "6.14.1",
         "randomcolor": "^0.6.2",
         "re-resizable": "^6.9.1",
@@ -85,7 +84,7 @@
         "stylelint-config-standard": "^22.0.0",
         "stylelint-prettier": "^1.2.0",
         "subscriptions-transport-ws": "^0.11.0",
-        "typescript": "^4.4.3",
+        "typescript": "^4.6.3",
         "use-http": "^1.0.13",
         "use-query-params": "^1.2.0",
         "validator": "^13.5.2"
@@ -143,11 +142,14 @@
         "eslint-plugin-react": "^7.22.0",
         "eslint-plugin-react-hooks": "^4.2.0",
         "eslint-plugin-unused-imports": "^1.1.2",
+        "postcss-custom-properties": "^12.1.7",
         "prettier": "^2.2.1",
+        "sass": "^1.50.1",
         "typed-scss-modules": "^3.4.0"
     },
     "resolutions": {
         "**/@typescript-eslint/eslint-plugin": "^4.12.0",
-        "**/@typescript-eslint/parser": "^4.12.0"
+        "**/@typescript-eslint/parser": "^4.12.0",
+        "**/postcss-custom-properties": "^12.1.7"
     }
 }
