--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,6 @@
         "@highlight-run/react": "^1.1.6",
         "@highlight-run/react-mentions": "4.4.1",
         "@highlight-run/react-select": "^5.2.2",
-        "@highlight-run/react-virtuoso": "^2.2.7",
         "@highlight-run/rrweb": "1.2.1",
         "@rehooks/local-storage": "^2.4.0",
         "@rehooks/window-size": "^1.0.2",
@@ -75,6 +74,7 @@
         "react-syntax-highlighter": "^15.4.4",
         "react-text-transition": "^1.3.0",
         "react-use": "^17.2.4",
+        "react-virtuoso": "^2.13.1",
         "recharts": "^2.0.8",
         "source-map-explorer": "^2.5.2",
         "stacktrace-js": "^2.0.2",
