--- a/frontend/package.json
+++ b/frontend/package.json
@@ -70,6 +70,7 @@
         "react-scripts": "4.0.3",
         "react-select": "^3.1.1",
         "react-snowfall": "^1.1.1",
+        "react-slider": "^2.0.1",
         "react-spinners": "^0.9.0",
         "react-syntax-highlighter": "^15.4.4",
         "react-text-transition": "^1.3.0",
@@ -134,6 +135,7 @@
         "@types/react-highlight-words": "^0.16.1",
         "@types/react-linkify": "^1.0.1",
         "@types/react-syntax-highlighter": "^13.5.2",
+        "@types/react-slider": "^1.3.1",
         "@types/validator": "^13.1.3",
         "@typescript-eslint/eslint-plugin": "^4.15.1",
         "@typescript-eslint/parser": "^4.15.1",
