--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ apollo.config.js
 .yalc
 yalc.lock
 
-**/.idea
 **/*.pem
 **/*.test
 **/.swp
@@ -22,5 +21,6 @@ yalc.lock
 
 backend/backend
 
-# Artifacts from VSCode
+# Editor Artifacts
+**/.idea
 .vscode/*.log
