--- a/client/package.json
+++ b/client/package.json
@@ -1,61 +1,67 @@
 {
-    "name": "webpack-js-library",
-    "version": "1.0.0",
-    "description": "webpack setup for writing a javascript library and making it availabe as script or npm package",
+    "name": "@highlight-run/client",
+    "private": true,
+    "version": "1.1.0",
+    "description": "rollup setup for writing a javascript library and making it availabe as script or npm package",
     "main": "dist/index.js",
+    "module": "dist/index.mjs",
     "scripts": {
-        "build": "webpack",
-        "dev": "doppler run -- webpack serve --progress",
+        "build": "rollup -c",
+        "dev": "doppler run -- rollup -c -w",
         "lint": "prettier --check --write 'src/**/*.{ts,tsx,scss}'",
         "gql": "graphql-codegen --config --watch codegen.yml",
         "test": "jest --passWithNoTests"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/vyasriday/webpack-js-library.git"
+        "url": "git+https://github.com/highlight-run/highlight.git"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "bugs": {
-        "url": "https://github.com/vyasriday/webpack-js-library/issues"
+        "url": "https://github.com/highlight-run/highlight/issues"
     },
-    "homepage": "https://github.com/vyasriday/webpack-js-library#readme",
+    "homepage": "https://github.com/highlight-run/highlight#readme",
     "devDependencies": {
-        "@babel/core": "^7.11.1",
-        "@babel/preset-env": "^7.11.0",
-        "@babel/preset-typescript": "^7.13.0",
         "@graphql-codegen/cli": "^2.6.2",
         "@graphql-codegen/import-types-preset": "^2.1.20",
         "@graphql-codegen/typescript": "^2.5.1",
         "@graphql-codegen/typescript-graphql-request": "^4.4.10",
         "@graphql-codegen/typescript-operations": "^2.4.2",
         "@graphql-codegen/typescript-react-apollo": "^3.2.16",
-        "@types/clientjs": "^0.1.0",
+        "@types/clientjs": "^0.2.0",
         "@types/jest": "^26.0.20",
         "@types/json-stringify-safe": "^5.0.0",
         "@types/node": "^16.3.1",
-        "babel-eslint": "^10.1.0",
-        "babel-loader": "^8.0.6",
-        "eslint": "^6.8.0",
+        "@typescript-eslint/eslint-plugin": "^5.30.0",
+        "@typescript-eslint/parser": "^5.30.0",
+        "eslint": "^8.18.0",
+        "eslint-plugin-simple-import-sort": "^7.0.0",
+        "eslint-plugin-unused-imports": "^2.0.0",
         "jest": "^26.6.3",
         "prettier": "^2.2.1",
-        "ts-loader": "^8.0.12",
-        "typescript": "^4.1.3",
-        "webpack": "^5.10.1",
-        "webpack-cli": "^4.5.0",
-        "webpack-dev-server": "^3.11.0",
-        "webpack-merge": "^5.7.0"
+        "typescript": "^4.1.3"
     },
     "dependencies": {
-        "@babel/plugin-transform-runtime": "^7.16.7",
         "@highlight-run/rrweb": "2.0.10",
-        "clientjs": "0.1.11",
-        "error-stack-parser": "^2.0.6",
+        "@rollup/plugin-commonjs": "^22.0.1",
+        "@rollup/plugin-node-resolve": "^13.3.0",
+        "@rollup/plugin-typescript": "^8.3.3",
+        "clientjs": "0.2.1",
+        "error-stack-parser": "2.0.6",
+        "esbuild": "^0.14.47",
         "graphql": "^16.5.0",
         "graphql-tag": "^2.12.6",
         "graphql-request": "^4.3.0",
         "json-stringify-safe": "^5.0.1",
-        "stacktrace-js": "^2.0.2"
+        "rollup": "^2.75.7",
+        "rollup-plugin-dev": "^2.0.4",
+        "rollup-plugin-esbuild": "^4.9.1",
+        "rollup-plugin-filesize": "^9.1.2",
+        "rollup-plugin-json": "^4.0.0",
+        "rollup-plugin-terser": "^7.0.2",
+        "rollup-plugin-web-worker-loader": "^1.6.1",
+        "stacktrace-js": "2.0.2"
     }
 }
