--- a/frontend/package.json
+++ b/frontend/package.json
@@ -66,6 +66,7 @@
         "react-resize-panel-ts": "^0.0.5",
         "react-router-dom": "^5.2.0",
         "react-select": "^3.1.1",
+        "react-slider": "^2.0.1",
         "react-snowfall": "^1.1.1",
         "react-spinners": "^0.9.0",
         "react-syntax-highlighter": "^15.4.4",
@@ -129,11 +130,12 @@
         "@types/react-helmet": "^6.1.4",
         "@types/react-highlight-words": "^0.16.1",
         "@types/react-linkify": "^1.0.1",
+        "@types/react-slider": "^1.3.1",
         "@types/react-syntax-highlighter": "^13.5.2",
         "@types/validator": "^13.1.3",
         "@typescript-eslint/eslint-plugin": "^4.15.1",
         "@typescript-eslint/parser": "^4.15.1",
-        "@vitejs/plugin-react": "^1.3.1",
+        "@vitejs/plugin-react": "^1.3.2",
         "eslint": "^7.32.0",
         "eslint-config-prettier": "^7.2.0",
         "eslint-plugin-prettier": "^3.3.1",
@@ -148,11 +150,11 @@
         "sass": "^1.50.1",
         "ts-jest": "^27.1.4",
         "typed-scss-modules": "^3.4.0",
-        "vite": "^2.9.6",
+        "vite": "^2.9.13",
         "vite-plugin-env-compatible": "^1.1.1",
-        "vite-plugin-imp": "^2.1.8",
+        "vite-plugin-imp": "^2.2.0",
         "vite-plugin-svgr": "^1.1.0",
-        "vite-tsconfig-paths": "^3.4.1"
+        "vite-tsconfig-paths": "^3.5.0"
     },
     "packageManager": "yarn@3.2.0"
 }
