--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,7 @@
         "color-hash": "^2.0.1",
         "dinero.js": "^2.0.0-alpha.8",
         "eslint-plugin-simple-import-sort": "^7.0.0",
-        "firebase": "^7.19.1",
+        "firebase": "^9.8.4",
         "framer-motion": "^4.1.17",
         "graphql": "^15.5.0",
         "highlight.run": "^4.2.7",
@@ -133,6 +133,7 @@
         "@types/react-slider": "^1.3.1",
         "@types/react-syntax-highlighter": "^13.5.2",
         "@types/validator": "^13.1.3",
+        "@types/ws": "^8.5.3",
         "@typescript-eslint/eslint-plugin": "^4.15.1",
         "@typescript-eslint/parser": "^4.15.1",
         "@vitejs/plugin-react": "^1.3.2",
@@ -147,6 +148,7 @@
         "less-vars-to-js": "^1.3.0",
         "postcss-custom-properties": "^12.1.7",
         "prettier": "^2.2.1",
+        "rollup-plugin-visualizer": "^5.6.0",
         "sass": "^1.50.1",
         "ts-jest": "^27.1.4",
         "typed-scss-modules": "^3.4.0",
