--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
         "@types/react-router-dom": "^5.1.5",
         "@types/react-select": "^3.0.28",
         "antd": "^4.6.3",
+        "apollo3-cache-persist": "^0.14.0",
         "classnames": "^2.2.6",
         "color-hash": "^2.0.1",
         "craco-antd": "^1.19.0",
@@ -69,8 +70,8 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "react-select": "^3.1.1",
-        "react-snowfall": "^1.1.1",
         "react-slider": "^2.0.1",
+        "react-snowfall": "^1.1.1",
         "react-spinners": "^0.9.0",
         "react-syntax-highlighter": "^15.4.4",
         "react-text-transition": "^1.3.0",
@@ -134,8 +135,8 @@
         "@types/react-helmet": "^6.1.4",
         "@types/react-highlight-words": "^0.16.1",
         "@types/react-linkify": "^1.0.1",
-        "@types/react-syntax-highlighter": "^13.5.2",
         "@types/react-slider": "^1.3.1",
+        "@types/react-syntax-highlighter": "^13.5.2",
         "@types/validator": "^13.1.3",
         "@typescript-eslint/eslint-plugin": "^4.15.1",
         "@typescript-eslint/parser": "^4.15.1",
