--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "scripts": {
         "frontend:start": "concurrently 'cd frontend && yarn start' 'cd frontend && yarn gql' 'cd frontend && yarn styles' 'cd client && yarn dev' 'cd client && yarn gql' 'cd firstload && yarn dev'",
         "frontend:install": "concurrently 'cd frontend && yarn' 'cd client && yarn' 'cd firstload && yarn'"
+    },
+    "devDependencies": {
+        "hygen": "^6.2.7"
     }
 }
