--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,13 @@
     "version": "1.11.0",
     "private": true,
     "dependencies": {
-        "@apollo/client": "^3.1.4",
+        "@apollo/client": "^3.6.9",
         "@craco/craco": "^6.1.1",
         "@datadog/browser-logs": "^4.0.1",
         "@highlight-run/react": "^1.1.6",
         "@highlight-run/react-mentions": "4.4.1",
         "@highlight-run/react-select": "^5.2.2",
-        "@highlight-run/rrweb": "2.0.16",
+        "@highlight-run/rrweb": "2.0.17",
         "@rehooks/local-storage": "^2.4.0",
         "@rehooks/window-size": "^1.0.2",
         "@stripe/stripe-js": "^1.11.0",
@@ -33,6 +33,7 @@
         "firebase": "^7.19.1",
         "framer-motion": "^4.1.17",
         "graphql": "^15.5.0",
+        "graphql-ws": "^5.9.1",
         "highlight.run": "^4.2.7",
         "intro.js": "^4.1.0",
         "intro.js-react": "^0.4.0",
@@ -85,7 +86,6 @@
         "stylelint-config-sass-guidelines": "^8.0.0",
         "stylelint-config-standard": "^22.0.0",
         "stylelint-prettier": "^1.2.0",
-        "subscriptions-transport-ws": "^0.11.0",
         "typescript": "^4.6.3",
         "use-http": "^1.0.13",
         "use-query-params": "^1.2.0",
