--- a/client/package.json
+++ b/client/package.json
@@ -56,6 +56,7 @@
         "graphql-tag": "^2.12.6",
         "json-stringify-safe": "^5.0.1",
         "rollup": "^2.75.7",
+        "rollup-plugin-consts": "^1.1.0",
         "rollup-plugin-dev": "^2.0.4",
         "rollup-plugin-esbuild": "^4.9.1",
         "rollup-plugin-filesize": "^9.1.2",
