fix process env error

--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
         "@highlight-run/rrweb": "2.0.17",
         "@rollup/plugin-commonjs": "^22.0.1",
         "@rollup/plugin-node-resolve": "^13.3.0",
+        "@rollup/plugin-replace": "^4.0.0",
         "@rollup/plugin-typescript": "^8.3.3",
         "clientjs": "0.2.1",
         "error-stack-parser": "2.0.6",
