--- a/firstload/package.json
+++ b/firstload/package.json
@@ -30,7 +30,8 @@
         "typescript": "^4.0.3"
     },
     "dependencies": {
-        "@rollup/plugin-commonjs": "^22.0.1"
+        "@rollup/plugin-commonjs": "^22.0.1",
+        "@rollup/plugin-replace": "^4.0.0"
     },
     "setupFiles": [
         "./tests/jest.overrides.js"
