--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     },
     "scripts": {
         "frontend:start": "concurrently 'cd frontend && yarn start' 'cd frontend && yarn gql' 'cd frontend && yarn styles' 'cd client && yarn dev' 'cd client && yarn gql' 'cd firstload && yarn dev'",
-        "frontend:install": "concurrently 'cd frontend && yarn' 'cd client && yarn' 'cd firstload && yarn'"
+        "frontend:install": "concurrently 'cd frontend && yarn' 'cd client && yarn' 'cd firstload && yarn'",
+        "generate": "hygen",
+        "g": "hygen"
     },
     "devDependencies": {
         "hygen": "^6.2.7"
