--- a/firstload/package.json
+++ b/firstload/package.json
@@ -27,6 +27,7 @@
         "rollup-plugin-json": "^4.0.0",
         "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-web-worker-loader": "^1.6.1",
+        "tslib": "^2.4.0",
         "typescript": "^4.0.3"
     },
     "dependencies": {
