--- a/frontend/package.json
+++ b/frontend/package.json
@@ -86,6 +86,7 @@
         "stylelint-config-sass-guidelines": "^8.0.0",
         "stylelint-config-standard": "^22.0.0",
         "stylelint-prettier": "^1.2.0",
+        "subscriptions-transport-ws": "^0.11.0",
         "typescript": "^4.6.3",
         "use-http": "^1.0.13",
         "use-query-params": "^1.2.0",
