--- a/.github/workflows/firstload.yml
+++ b/.github/workflows/firstload.yml
@@ -28,7 +28,7 @@ jobs:
             - name: Confirm new version
               run: cd firstload && python3 ../scripts/compare.py -s firstload
             - name: Publish
-              if: github.ref == 'refs/heads/master'
+              if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/beta'
               run: cd firstload && yarn publish --access public
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
