[HIG-2358] use rrweb 2.0.17 in frontend (#2750)
new rrweb changes bring rrdom and associated performance improvements, 
canvas recording/playback fixes, and image/stylesheet inlining.

using new rrweb in frontend is backwards compatible with recordings using the old client.
**NOTE: rrdom (virtualDom) is disabled via `Replayer` config because there are still bugs that crash playback**

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,13 @@
     "version": "1.11.0",
     "private": true,
     "dependencies": {
-        "@apollo/client": "^3.1.4",
+        "@apollo/client": "^3.6.9",
         "@craco/craco": "^6.1.1",
         "@datadog/browser-logs": "^4.0.1",
         "@highlight-run/react": "^1.1.6",
         "@highlight-run/react-mentions": "4.4.1",
         "@highlight-run/react-select": "^5.2.2",
-        "@highlight-run/rrweb": "1.2.1",
+        "@highlight-run/rrweb": "2.0.17",
         "@rehooks/local-storage": "^2.4.0",
         "@rehooks/window-size": "^1.0.2",
         "@stripe/stripe-js": "^1.11.0",
@@ -33,6 +33,7 @@
         "firebase": "^7.19.1",
         "framer-motion": "^4.1.17",
         "graphql": "^15.5.0",
+        "graphql-ws": "^5.9.1",
         "highlight.run": "^4.2.7",
         "intro.js": "^4.1.0",
         "intro.js-react": "^0.4.0",
