--- a/frontend/package.json
+++ b/frontend/package.json
@@ -155,6 +155,7 @@
         "typescript": "^4.7.4"
     },
     "resolutions": {
-        "**/postcss-custom-properties": "^12.1.7"
+        "**/postcss-custom-properties": "^12.1.7",
+        "react-error-overlay": "6.0.9"
     }
 }
