--- a/client/package.json
+++ b/client/package.json
@@ -48,6 +48,7 @@
     "dependencies": {
         "@highlight-run/rrweb": "2.0.17",
         "@rollup/plugin-commonjs": "^22.0.1",
+        "@rollup/plugin-json": "^4.1.0",
         "@rollup/plugin-node-resolve": "^13.3.0",
         "@rollup/plugin-replace": "^4.0.0",
         "@rollup/plugin-typescript": "^8.3.3",
@@ -63,7 +64,6 @@
         "rollup-plugin-dev": "^2.0.4",
         "rollup-plugin-esbuild": "^4.9.1",
         "rollup-plugin-filesize": "^9.1.2",
-        "rollup-plugin-json": "^4.0.0",
         "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-web-worker-loader": "^1.6.1",
         "stacktrace-js": "2.0.2"
