fix client amplify build

--- a/amplify.yml
+++ b/amplify.yml
@@ -1,6 +1,7 @@
 version: 1
 applications:
-  - frontend:
+  - appRoot: frontend
+    frontend:
       phases:
         preBuild:
           commands:
@@ -16,8 +17,8 @@ applications:
       cache:
         paths:
           - node_modules/**/*
-    appRoot: frontend
-  - client:
+  - appRoot: client
+    frontend:
       phases:
         preBuild:
           commands:
@@ -32,4 +33,3 @@ applications:
       cache:
         paths:
           - node_modules/**/*
-    appRoot: client
