--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
         "firebase": "^8.10.1",
         "framer-motion": "^4.1.17",
         "graphql": "^15.5.0",
-        "highlight.run": "4.3.1",
+        "highlight.run": "file:.yalc/highlight.run",
         "intro.js": "^4.1.0",
         "intro.js-react": "^0.6.0",
         "lottie-react": "^2.1.0",
