Revert "remove clientjs"
This reverts commit cb1884b94e85eb4d958ffd549ac7acd5ce3f8776.

--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
         "@graphql-codegen/typescript": "^2.7.2",
         "@graphql-codegen/typescript-graphql-request": "^4.5.2",
         "@graphql-codegen/typescript-operations": "^2.5.2",
+        "@types/clientjs": "^0.2.0",
         "@types/jest": "^26.0.20",
         "@types/json-stringify-safe": "^5.0.0",
         "@types/node": "^16.3.1",
@@ -49,6 +50,7 @@
         "@rollup/plugin-node-resolve": "^13.3.0",
         "@rollup/plugin-replace": "^4.0.0",
         "@rollup/plugin-typescript": "^8.3.3",
+        "clientjs": "0.2.1",
         "error-stack-parser": "2.0.6",
         "esbuild": "^0.14.47",
         "graphql": "^16.5.0",
