Name tasks run with concurrently

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "concurrently": "^6.5.1"
     },
     "scripts": {
-        "frontend:start": "concurrently 'cd frontend && yarn start' 'cd frontend && yarn gql' 'cd frontend && yarn styles' 'cd client && yarn dev' 'cd client && yarn gql' 'cd client && yarn lint-watch' 'cd firstload && yarn dev'",
+        "frontend:start": "concurrently -n frontend:build,frontend:gql,frontend:styles,client:build,client:gql,client:lint,firstload:build 'cd frontend && yarn start' 'cd frontend && yarn gql' 'cd frontend && yarn styles' 'cd client && yarn dev' 'cd client && yarn gql' 'cd client && yarn lint-watch' 'cd firstload && yarn dev'",
         "frontend:install": "concurrently 'cd frontend && yarn' 'cd client && yarn' 'cd firstload && yarn'",
         "generate": "hygen",
         "g": "hygen"
