Add deploy config and task definition

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -86,7 +86,7 @@ jobs:
                 task-definition: ${{ steps.image-metric-monitor.outputs.task-definition }}
                 service: metric-monitor
                 cluster: highlight-production-cluster
-          # Edit and deploy public worker
+            # Edit and deploy public worker
             - name: Replace image label for public worker service
               id: image-public-worker
               uses: aws-actions/amazon-ecs-render-task-definition@v1
@@ -99,4 +99,18 @@ jobs:
               with:
                 task-definition: ${{ steps.image-public-worker.outputs.task-definition }}
                 service: public-worker-service
+                cluster: highlight-production-cluster
+            # Edit and deploy migrate worker
+            - name: Replace image label for migrate worker service
+              id: image-migrate-worker
+              uses: aws-actions/amazon-ecs-render-task-definition@v1
+              with:
+                task-definition: deploy/migrate-worker-service.json
+                container-name: highlight-backend
+                image: ${{ steps.login-ecr.outputs.registry }}/highlight-production-ecr-repo:${{ github.sha }}
+            - name: Deploy to Amazon ECS migrate worker service
+              uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+              with:
+                task-definition: ${{ steps.image-migrate-worker.outputs.task-definition }}
+                service: migrate-worker-service
                 cluster: highlight-production-cluster
