Change from service to task

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,19 +31,23 @@ jobs:
                 docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f deploy/Dockerfile.prod .
                 docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
             # Edit and deploy migrate worker
-            - name: Replace image label for migrate worker service
+            - name: Replace image label for migrate worker task
               id: image-migrate-worker
               uses: aws-actions/amazon-ecs-render-task-definition@v1
               with:
-                task-definition: deploy/migrate-worker-service.json
+                task-definition: deploy/migrate-worker-task.json
                 container-name: highlight-backend
                 image: ${{ steps.login-ecr.outputs.registry }}/highlight-production-ecr-repo:${{ github.sha }}
             - name: Deploy to Amazon ECS migrate worker service
               uses: aws-actions/amazon-ecs-deploy-task-definition@v1
               with:
+              uses: smitp/amazon-ecs-run-task@v1
+              with:
                 task-definition: ${{ steps.image-migrate-worker.outputs.task-definition }}
-                service: migrate-worker-service
                 cluster: highlight-production-cluster
+                count: 1
+                started-by: github-actions-${{ github.actor }}
+                wait-for-finish: true
             # Edit and deploy private-graph
             - name: Replace image label for private-graph task
               id: image-private-graph
