[HIG-2570] convert client pushPayload to using a web worker (#2888)
Use a web worker in client to serialize and push payloads.
This ensures that our message buffers are never backed up in client so we will not run into a situation where we
block the UI thread due to serializing graphql payloads.

--- a/firstload/package.json
+++ b/firstload/package.json
@@ -1,8 +1,8 @@
 {
     "name": "highlight.run",
-    "version": "4.3.4",
+    "version": "4.3.5",
     "scripts": {
-        "build": "tsc && rollup -c",
+        "build": "rollup -c",
         "dev": "doppler run -- rollup -c -w",
         "lint": "prettier --check --write 'src/**/*.{ts,tsx,scss}'",
         "test": "jest --detectOpenHandles"
