--- a/frontend/package.json
+++ b/frontend/package.json
@@ -68,13 +68,13 @@
         "react-virtualized-auto-sizer": "^1.0.6",
         "react-virtuoso": "^2.13.1",
         "recharts": "^2.1.13",
-        "sanitize-html": "^2.7.1",
         "source-map-explorer": "^2.5.2",
         "stacktrace-js": "^2.0.2",
         "subscriptions-transport-ws": "^0.11.0",
         "use-http": "^1.0.26",
         "use-query-params": "^1.2.0",
-        "validator": "13.7.0"
+        "validator": "13.7.0",
+        "xss": "^1.0.14"
     },
     "scripts": {
         "start": "HTTPS=true doppler run -- vite",
@@ -159,6 +159,7 @@
         "typed-scss-modules": "^3.4.0",
         "typescript": "^4.7.4",
         "vite": "^3.0.9",
+        "vite-plugin-env-compatible": "^1.1.1",
         "vite-plugin-svgr": "^2.2.1",
         "vite-tsconfig-paths": "^3.5.0"
     },
