apply prettier globally

--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
         "concurrently": "^6.5.1"
     },
     "scripts": {
+        "prepare": "husky install",
         "frontend:start": "concurrently -n frontend:build,frontend:gql,frontend:styles,client:build,client:gql,client:lint,firstload:build 'cd frontend && yarn start' 'cd frontend && yarn gql' 'cd frontend && yarn styles' 'cd client && yarn dev' 'cd client && yarn gql' 'cd client && yarn lint-watch' 'cd firstload && yarn dev'",
         "frontend:install": "concurrently 'cd frontend && yarn' 'cd client && yarn' 'cd firstload && yarn'",
         "generate": "hygen",
-        "g": "hygen"
+        "g": "hygen",
+        "format": "prettier --write ."
     },
     "devDependencies": {
-        "hygen": "^6.2.7"
+        "husky": "^8.0.1",
+        "hygen": "^6.2.7",
+        "prettier": "^2.7.1",
+        "pretty-quick": "^3.1.3"
     }
 }
